# osdev

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh
kernel/: CMakeLists.txt  CxxRuntime.cc  Makefile  acpi.c  builddate.h  console.c  kernel.h  objpath.c  objpath.h  panic.c  sections.h  syscall.c  syscall.h  ticktime.c  videoconsole.c
kernel/api/bits/: errno.h  limits.h  syscall.h
kernel/arch/: arch.h
kernel/arch/x86/: Idt.cc  Idt.hh  Isr.cc  Isr.hh  SmpBoot.cc  SmpBoot.hh  Syscall.cc  Syscall.h  _internal.h  _isr.h  arch.h  entry.c  entry.cc  i8254timer.c  i8259pic.c  idt.c  interrupts.c  ioapic.c  ioport.c  isr.c  lapic.c  link.ld  madt.c  mmu.c  processor.c  smpboot.c  stacktrace.c  syscall.c  uaccess.c  uartconsole.c
kernel/cli/: cli.c  cli.h  cliarg.c  cliarg.h  clicmd.h  clicmd_testmalloc.c  clicmd_testpagealloc.c
kernel/crt/: crti.S  crtn.S
kernel/heap/: heap.h  kmalloc.c  vmmalloc.c
kernel/interrupt/: interrupts.c  interrupts.h
kernel/lock/: mutex.c  mutex.h  spinlock.c  spinlock.h
kernel/memory/: _internal.h  memory.h  physpage.c  physzone.c  virtzone.c
kernel/tasks/: exec.c  process.c  scheduler.c  tasks.h  thread.c
kernel/utility/: Atomic.hh  avltree.c  avltree.h  bitmap.c  bitmap.h  list.c  list.h  queue.c  queue.h  strutil.c  strutil.h  ubsan.c  utility.h
kernel/web/: web.h
kernel/web/html/: html.h  tokenizer.c
support/: common.mk  env.mk
support/patches/: binutils.patch  gcc.patch
support/res/: limine.cfg
support/tools/: build_toolchain.sh  copy_libc_headers.sh  fontgen.py  format.sh  get_limine.sh  run.py
userland/: CMakeLists.txt  Makefile
userland/hellosvc/: CMakeLists.txt  Makefile  main.c  strfmt.c  strfmt.h
userland/libc/: .clang-tidy  CMakeLists.txt  Makefile  assert.c  assert.h  errno.c  errno.h  limits.h  sched.h  stdio.h  stdlib.h  string.c  string.h  time.h  unistd.h
userland/libc/crt/: crt0.c
userland/libc/isos/: syscall.c  syscall.h
userland/libc/sched/: sched_yield.c
userland/libc/stdio/: fflush.c  fprintf.c  fputc.c  fputs.c  fwrite.c  stdio.c
userland/libc/string/: memcpy.c  strlen.c
userland/libc/sys/: types.h
userland/libc/unistd/: read.c  write.c
userland/libc/yjk/: dprint.c  dprint.h  magicfd.h  syscall.c  syscall.h
userland/libc_crt0/: Makefile  crt0.c
